Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/ResourceInterface.out
ResourceInterface.java:15:23: compiler.err.unreported.exception.implicit.close: ResourceInterface.E1, r2
1 error
